--- a/assets/jsconfig.json
+++ b/assets/jsconfig.json
@@ -3,7 +3,7 @@
   "baseUrl": ".",
   "paths": {
    "*": [
-    "..\\themes\\hugo-theme-stack-master\\assets\\*"
+    "../themes/hugo-theme-stack-master/assets/*"
    ]
   }
  }
