--- a/hugo.yaml
+++ b/hugo.yaml
@@ -63,7 +63,7 @@ params:
     article:
         math: true
         toc: true
-        readingTime: false
+        readingTime: true
         license:
             enabled: false
             default: Licensed under CC BY-NC-SA 4.0
